[package]
name = "open_card"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
eyre = "0.6.8"
image = "0.24.5"
enum-gen = {path = "./enum-gen"}
stackimport = {path = "./stackimport"}
ascii_converter = "0.3.0"

