[package]
name = "open_card"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hc-decode = {path = "./hc-decode"}
stackimport = {path = "./stackimport"}

clap = { version = "4.0.32", features = ["derive"] }
image = "0.24.5"
ascii_converter = "0.3.0"
futures = "0.3.25"
tokio = { version = "1.24.2", features = ["rt", "macros", "rt-multi-thread"] }
paste = "1.0.11"

