[package]
name = "open_card"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hc-decode = {path = "./hc-decode"}
woba = {path = "./woba-rs"}

clap = { version = "4.4.18", features = ["derive"] }
image = "0.24.8"
tokio = { version = "1.35.1", features = ["rt", "macros", "rt-multi-thread"] }

