[package]
name = "hc-decode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum-gen = {path = "./enum-gen"}
stackimport = {path = "../stackimport"}
eyre = "0.6.8"
futures = "0.3.28"
image = "0.24.6"
paste = "1.0.12"
chrono = "0.4.26"

[lib]
