[package]
name = "stackimport"
version = "0.1.0"
edition = "2021"
links = "stackimport"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cc = { version = "1.0.78", features = ["parallel"] }

[dependencies]
ascii_converter = "0.3.0"
eyre = "0.6.8"
