[package]
name = "woba"
description = "Code for decrypting WOBA formatted images from HyperCard files."
version = "0.0.1"
edition = "2021"
links = "stackimport"
license = "MIT"
homepage = "https://github.com/IoIxD/OpenCard/tree/master/woba-rs"
repository = "https://github.com/IoIxD/OpenCard/tree/master/woba-rs"
readme = "./README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cc = { version = "1.0.78", features = ["parallel"] }

[dependencies]
ascii_converter = "0.3.0"
eyre = "0.6.8"
